# LaTeXSnipper

./: .deps_state.json  .gitignore  LICENSE  LaTeXSnipper-linux.spec  LaTeXSnipper-macos.spec  LaTeXSnipper.spec  README_MATHCRAFT_OCR.md  pyproject.toml  readme.md  requirements-linux.txt  requirements-macos.txt  requirements.txt  version_info.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Inno/: latexsnipper.iss
docs/: MathCraft_OCR_Design.md  developer_code_standards.md  faq.md  latexsnip_txstudio_intro.md  office_plugin_design.md  platform_adaptation_audit.md  user_data_storage.md
mathcraft_ocr/: __init__.py  cache.py  hardware.py
office_plugin/: LaTeXSnipper.OfficePlugin.slnx  README.md
office_plugin/docs/: WPS-MAC-SUPPORT-PLAN.md
office_plugin/installer/: README.md  WriteVstoInclusions.ps1  build-wps-setup.bat  build.bat  setup.iss  wps-setup.iss
office_plugin/release/: OfficePluginSetup-2.3.2.exe.sha256  OfficePluginSetup-2.4.0.exe.sha256  README.md
office_plugin/shared/: jest.config.js  package-lock.json  package.json
office_plugin/tools/: Build-NativeOleHandler.ps1  Build-VstoAddIns.ps1  Check-Registry.ps1  Diag-Word.ps1  ForceClean.ps1  OfficeVstoRegistration.ps1  Register-OfficeVstoAddIns.ps1  Register-PowerPointVstoAddIn.ps1  Register-WordVstoAddIn.ps1  Test-FormulaMetadataCom.ps1
scripts/: build_deb.sh  build_github_release_installer.ps1  build_macos.sh  latexsnipper-clean-user-data.sh  package_common.sh
src/backend/: cuda_runtime_policy.py  model.py
src/bootstrap/: deps_bootstrap.py  deps_context.py  deps_entry.py  deps_layer_specs.py  deps_pandoc.py  deps_pip_runner.py  deps_python_runtime.py  deps_runtime_verify.py  deps_ui.py  deps_workers.py
src/capture/: capture_controller.py
src/editor/: latex_snippet_panel.py  workbench_bridge.py  workbench_window.py
src/exporting/: formula_converters.py  formula_export.py  formula_format_helpers.py  mathjax_converter.py  pandoc_exporter.py
test/: test_clipboard_image_recognition.py  test_core_verify_and_ocr_cache.py  test_cross_platform_cleanup.py  test_deps_python_runtime.py  test_export_combined.py  test_formula_export_matrix.py  test_formula_omml_export.py  test_mathcraft_ocr.py  test_office_bridge.py  test_office_plugin_docs.py  test_office_plugin_structure.py  test_pandoc_dependency_config.py  test_pandoc_export_formats.py  test_sharing_e2e.py  test_static_mathlive_assets.py  test_update_release_assets.py
user_manual/: user_manual.md  user_manual.typ
(+216 files in other folders)
